Use CURRENT_SOURCE_DIR instead of SOURCE_DIR, to allow submodule build/install correctly

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -222,7 +222,7 @@ ADD_SUBDIRECTORY (prog)
 texi_doc(udunits2.texi version.texi COPYRIGHT)
 
 # Install CHANGE_LOG and COPYRIGHT
-install(FILES "${CMAKE_SOURCE_DIR}/CHANGE_LOG" DESTINATION
+install(FILES "${CMAKE_CURRENT_SOURCE_DIR}/CHANGE_LOG" DESTINATION
             ${CMAKE_INSTALL_DOCDIR})
 install(FILES "${PROJECT_SOURCE_DIR}/COPYRIGHT" DESTINATION
             ${CMAKE_INSTALL_DOCDIR})
